Implemented backend api. WIP EventInfo widget

--- a/client/source/index.less
+++ b/client/source/index.less
@@ -3,3 +3,22 @@ body {
     overscroll-behavior: contain;
 }
 
+.headJudgeInterface {
+    li {
+        font-size: 1.5em;
+    }
+
+    .poolSelectContainer {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .poolWidget {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .poolWidgetActive {
+        background-color: rgb(70, 224, 230);
+    }
+}
