--- a/client/source/index.less
+++ b/client/source/index.less
@@ -21,6 +21,47 @@ body {
     .poolWidgetActive {
         background-color: rgb(70, 224, 230);
     }
+
+    .runControls {
+        .buttons {
+            display: flex;
+            flex-direction: row;
+            height: 5em;
+
+            button {
+                flex-grow: 1;
+            }
+        }
+
+        .details {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            .teams {
+                .team {
+                    font-size: 1.5em;
+                    cursor: pointer;
+                    border: 1px lightgray dashed;
+                    padding-left: 1em;
+                    padding-right: 1em;
+                    margin-bottom: 5px;
+                    background-color:rgb(248, 248, 248);
+                }
+
+                .selected {
+                    .team;
+                    font-weight: bold;
+                    border: 2px black solid;
+                    background-color:rgb(186, 255, 169);
+                }
+            }
+
+            .judges {
+                padding-right: 1em;
+            }
+        }
+    }
 }
 
 .results2020 {
@@ -77,8 +118,9 @@ body {
                 }
 
                 .subHeaderTotal {
-                    border-right: 1px solid gray;
                     .subHeaderRank;
+                    border-right: 1px solid gray;
+                    width: 3.5em;
                 }
             }
 
@@ -129,9 +171,10 @@ body {
                         }
 
                         .total {
+                            .rank;
                             border-left: 1px solid gray;
                             border-right: 1px solid gray;
-                            .rank;
+                            width: 3.5em;
                         }
                     }
                 }
