PoolCreator import merging

--- a/client/source/index.less
+++ b/client/source/index.less
@@ -6,6 +6,16 @@ body {
 .headJudgeInterface {
     li {
         font-size: 1.5em;
+        -webkit-touch-callout: none; /* iOS Safari */
+        -webkit-user-select: none; /* Safari */
+        -khtml-user-select: none; /* Konqueror HTML */
+        -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+        user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+    }
+
+    li:hover {
+        color: gray;
     }
 
     .poolSelectContainer {
@@ -48,6 +58,10 @@ body {
                     padding-right: 1em;
                     margin-bottom: 5px;
                     background-color:rgb(248, 248, 248);
+                }
+
+                .team:hover {
+                    color: rgb(114, 114, 114);
                 }
 
                 .selected {
