Judge base widget. Diff widget start

--- a/client/source/index.less
+++ b/client/source/index.less
@@ -3,197 +3,18 @@ body {
     overscroll-behavior: contain;
 }
 
-.headJudgeInterface {
-    li {
-        font-size: 1.5em;
-        -webkit-touch-callout: none; /* iOS Safari */
-        -webkit-user-select: none; /* Safari */
-        -khtml-user-select: none; /* Konqueror HTML */
-        -moz-user-select: none; /* Old versions of Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-        user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
-    }
-
-    li:hover {
-        color: gray;
-    }
-
-    .poolSelectContainer {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .poolWidget {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .poolWidgetActive {
-        background-color: rgb(70, 224, 230);
-    }
-
-    .runControls {
-        .buttons {
-            display: flex;
-            flex-direction: row;
-            height: 5em;
-
-            button {
-                flex-grow: 1;
-                font-size: 1.3em;
-            }
-        }
-
-        .details {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-
-            .teams {
-                .team {
-                    font-size: 1.5em;
-                    cursor: pointer;
-                    border: 1px lightgray dashed;
-                    padding-left: 1em;
-                    padding-right: 1em;
-                    margin-bottom: 5px;
-                    background-color:rgb(248, 248, 248);
-                }
-
-                .team:hover {
-                    color: rgb(114, 114, 114);
-                }
-
-                .selected {
-                    .team;
-                    font-weight: bold;
-                    border: 2px black solid;
-                    background-color:rgb(186, 255, 169);
-                }
-            }
-
-            .judges {
-                padding-right: 1em;
-            }
-        }
-    }
+.kindleTest {
+    width: 400px;
+    height: 683px;
+    border: 1px solid gray;
 }
 
-.results2020 {
-    .resultsSummary {
-        .title {
-            display: flex;
-            justify-content: center;
-            font-size: 1.5em;
-        }
-
-        .results {
-            border: 2px solid gray;
-            border-radius: 2px;
-
-            .header {
-                display: flex;
-                flex-direction: row;
-                border-bottom: 1px solid gray;
-
-                .subHeaderDescriptions {
-                    border-right: 1px solid gray;
-                    flex-grow: 1;
-
-                    .subHeaderTeam {
-                        font-weight: bold;
-                        border-bottom: 1px solid gray;
-                    }
-                }
-
-                .subHeaderCategories {
-                    display: flex;
-                    flex-direction: row;
-
-                    .subHeaderCategory {
-                        display: flex;
-                        justify-content: center;
-                        border-right: 1px solid gray;
-                        width: 3em;
-                    }
-
-                    .subHeaderCategoryBold {
-                        .subHeaderCategory;
-                        font-weight: bold;
-                    }
-                }
-
-                .subHeaderRank {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    font-weight: bold;
-                    font-size: 2em;
-                    width: 3em;
-                }
-
-                .subHeaderTotal {
-                    .subHeaderRank;
-                    border-right: 1px solid gray;
-                    width: 3.5em;
-                }
-            }
-
-            .scores {
-                display: flex;
-                flex-direction: row;
-
-                .score {
-                    display: flex;
-                    justify-content: center;
-                    border-right: 1px solid gray;
-                    width: 3em;
-                }
-
-                .scoreHighest {
-                    font-weight: bold;
-                }
-            }
-
-            .teams {
-
-                .team {
-                    display: flex;
-                    flex-direction: row;
-                    flex-grow: 1;
-                    justify-content: space-between;
-                    border-bottom: 1px solid gray;
-
-                    .teamDetails {
-                        flex-grow: 1;
-
-                        .teamName {
-                            font-weight: bold;
-                            border-bottom: 1px solid gray;
-                        }
-                    }
-
-                    .totals {
-                        display: flex;
-                        flex-direction: row;
-
-                        .rank {
-                            display: flex;
-                            flex-direction: row;
-                            justify-content: center;
-                            font-size: 2em;
-                            width: 3em;
-                        }
-
-                        .total {
-                            .rank;
-                            border-left: 1px solid gray;
-                            border-right: 1px solid gray;
-                            width: 3.5em;
-                        }
-                    }
-                }
-            }
-        }
-    }
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+              -webkit-user-select: none; /* Safari */
+               -khtml-user-select: none; /* Konqueror HTML */
+                 -moz-user-select: none; /* Old versions of Firefox */
+                  -ms-user-select: none; /* Internet Explorer/Edge */
+                      user-select: none; /* Non-prefixed version, currently
+                                            supported by Chrome, Edge, Opera and Firefox */
 }
