--- a/client/source/judgeWidgetBase.less
+++ b/client/source/judgeWidgetBase.less
@@ -163,6 +163,92 @@
     }
 }
 
+.judgeWidgetExAi {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 90%;
+
+    .ai {
+        width: 100%;
+        .header {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 100%;
+
+            label {
+                flex-grow: 1;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                flex-grow: 1;
+                font-size: 2em;
+            }
+        }
+
+        .aiInputs {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 100%;
+            font-size: 4em;
+
+            .number {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                flex-grow: 1;
+                background-color: aliceblue;
+                margin: 5px;
+                cursor: pointer;
+            }
+        }
+    }
+
+    .ex {
+        width: 100%;
+        margin-top: 1em;
+
+        .exRow {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            border: 1px solid gray;
+            margin-bottom: -1px;
+
+            .number {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                width: 2em;
+                font-size: 3em;
+            }
+
+            label {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                font-size: 3em;
+            }
+
+            .exInput {
+                flex-grow: 1;
+            }
+        }
+    }
+
+    .inputNumber {
+        position: absolute;
+        z-index: 1;
+        bottom: 0;
+        width: 100%;
+        height: 60%;
+    }
+}
+
 .judgeWidgetVariety {
     display: flex;
     flex-direction: column;
@@ -350,6 +436,26 @@
                     padding-right: 2px;
                     background-color: lavender;
                     cursor: pointer;
+                }
+            }
+
+            .exAi {
+                display: flex;
+                flex-direction: column;
+
+                .exAiInputs {
+                    display: flex;
+                    flex-direction: row;
+                    font-size: 2em;
+
+                    .input {
+                        margin: 2px;
+                        padding-left: 2px;
+                        padding-right: 2px;
+                        background-color: lavender;
+                        width: 3.5em;
+                        cursor: pointer;
+                    }
                 }
             }
         }
