Moved event data updater to common class

--- a/client/source/index.less
+++ b/client/source/index.less
@@ -42,3 +42,10 @@ body {
     animation: editGlowing 2000ms infinite;
     background-color: salmon;
 }
+
+.expiredWidget {
+    position: absolute;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+}
