--- a/client/source/headJudgeWidget.less
+++ b/client/source/headJudgeWidget.less
@@ -22,10 +22,19 @@
     .poolWidget {
         display: flex;
         flex-direction: row;
+
+        .poolDetail {
+            cursor: help;
+        }
+
+        .error {
+            font-weight: bold;
+            color: red;
+        }
     }
 
     .poolWidgetActive {
-        background-color: rgb(70, 224, 230);
+        background-color: rgb(190, 253, 255);
     }
 
     .runControls {
