--- a/client/source/judgeWidgetBase.less
+++ b/client/source/judgeWidgetBase.less
@@ -121,14 +121,12 @@
 .inputNumberWidget {
     display: flex;
     flex-direction: column;
-    //height: 50%;
     background-color: rgba(248, 248, 248, 0.8);
 
     .row {
         display: flex;
         flex-direction: row;
         width: 100%;
-        height: 100%;
 
         .cell {
             display: flex;
@@ -140,10 +138,10 @@
             margin-left: -1px;
 
             button {
-                width: 90%;
-                height: 90%;
+                flex-grow: 1;
+                margin: 5px;
 
-                font-size: 9vh;
+                font-size: 3em;
                 font-weight: bold;
             }
         }
