Scoreboard, judge state, bug fixes

--- a/client/source/headJudgeWidget.less
+++ b/client/source/headJudgeWidget.less
@@ -79,6 +79,22 @@
 
             .judges {
                 padding-right: 1em;
+
+                .disconnected {
+                    color: gray;
+                }
+
+                .finished {
+                    color: lightgreen;
+                }
+
+                .editingState {
+                    color: lightsalmon;
+                }
+
+                .connected {
+                    color: black;
+                }
             }
         }
     }
