--- a/client/source/judgeWidgetBase.less
+++ b/client/source/judgeWidgetBase.less
@@ -51,16 +51,16 @@
 
         @keyframes glowing {
             0% {
-                background-color: #b1b1b1;
-                box-shadow: 0 0 5px #b1b1b1;
+                background-color: #4d4d4d8e;
+                box-shadow: 0 0 5px #4d4d4d8e;
             }
             50% {
-                background-color: #cfcfcf;
-                box-shadow: 0 0 20px #cfcfcf;
+                background-color: #9191913b;
+                box-shadow: 0 0 20px #9191913b;
             }
             100% {
-                background-color: #b1b1b1;
-                box-shadow: 0 0 5px #b1b1b1;
+                background-color: #4d4d4d8e;
+                box-shadow: 0 0 5px #4d4d4d8e;
             }
         }
 
@@ -109,7 +109,7 @@
             height: 100%;
             font-size: 2em;
             animation: glowing 1300ms infinite;
-            background-color: gray;
+            background-color: rgba(53, 53, 53, 0.37);
         }
     }
 }
