--- a/client/source/index.less
+++ b/client/source/index.less
@@ -55,3 +55,10 @@ iframe {
     height: 100%;
     border: 0px;
 }
+
+.eventDirectory {
+    .line2 {
+        display: flex;
+        flex-direction: row;
+    }
+}
