Judges on scoreboard, bigger ex buttons

--- a/client/source/results2020Widget.less
+++ b/client/source/results2020Widget.less
@@ -29,6 +29,17 @@
         }
     }
 
+    .judgeListRow {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+
+        .scoreboard {
+            font-size: 2em;
+            font-weight: bold;
+        }
+    }
+
     .resultsSummary {
         .title {
             display: flex;
