--- a/client/source/judgeWidgetBase.less
+++ b/client/source/judgeWidgetBase.less
@@ -64,6 +64,11 @@
             }
         }
 
+        .header {
+            font-weight: bold;
+            font-size: 3em;
+        }
+
         .generalInputNumberWidget {
             width: 100%;
             height: 50%;
@@ -75,7 +80,7 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
-                font-size: 1.25em;
+                font-size: 1.7em;
                 border: 1px gray solid;
                 margin-bottom: -1px;
                 cursor: pointer;
@@ -91,7 +96,7 @@
 
             button {
                 width: 100%;
-                font-size: 2em;
+                font-size: 3em;
                 animation: glowing 1300ms infinite;
                 background-color: gray;
             }
@@ -205,8 +210,11 @@
     }
 
     .ex {
+        display: flex;
+        flex-direction: column;
         width: 100%;
         margin-top: 1em;
+        flex-grow: 1;
 
         .exRow {
             display: flex;
@@ -214,6 +222,7 @@
             justify-content: space-between;
             border: 1px solid gray;
             margin-bottom: -1px;
+            flex-grow: 1;
 
             .number {
                 display: flex;
