--- a/client/source/judgeWidgetBase.less
+++ b/client/source/judgeWidgetBase.less
@@ -314,7 +314,6 @@
 
     .diffInputNumberWidget {
         width: 100%;
-        height: 50%;
     }
 
     .phrasesWidget {
@@ -327,6 +326,8 @@
         padding: 2px;
         width: 100%;
         min-height: 2em;
+        flex-grow: 1;
+        align-content: flex-start;
 
         .block {
             display: flex;
