Print Summary Button

--- a/client/source/results2020Widget.less
+++ b/client/source/results2020Widget.less
@@ -11,12 +11,20 @@
         visibility: visible;
     }
 
-    .detailedContainer {
+    .detailedContainer * {
         page-break-inside: avoid;
     }
 
+    .detailedContainerNone * {
+        display: none;
+    }
+
+    .judgeSummaryNone * {
+        display: none;
+    }
+
     button * {
-        visibility: hidden;
+        display: none;
     }
 }
 
