Added lines between teams on Scores tab. Remove deprecated data version code

--- a/client/source/judgeWidgetBase.less
+++ b/client/source/judgeWidgetBase.less
@@ -385,6 +385,7 @@
 
         .team {
             user-select: none;
+            border-top: solid lightgray 2px;
 
             .header {
                 font-size: 1.25em;
