--- a/client/source/judgeWidgetSimpleRanking.less
+++ b/client/source/judgeWidgetSimpleRanking.less
@@ -46,4 +46,11 @@
             }
         }
     }
+
+    .submit {
+        width: 100%;
+        height: 2em;
+        font-weight: bold;
+        font-size: 1.25em;
+    }
 }
