Fix border on results

--- a/client/source/judgeDataFpaBase.less
+++ b/client/source/judgeDataFpaBase.less
@@ -6,6 +6,8 @@
     border: 2px solid gray;
     border-radius: 3px;
     background-color: azure;
+    width: fit-content;
+    block-size: fit-content;
 
     .rawScores {
         display: flex;
