--- a/client/source/results2020Widget.less
+++ b/client/source/results2020Widget.less
@@ -58,6 +58,8 @@
         .results {
             border: 2px solid gray;
             border-radius: 2px;
+            width: fit-content;
+            block-size: fit-content;
 
             .header {
                 display: flex;
