--- a/client/source/headJudgeWidget.less
+++ b/client/source/headJudgeWidget.less
@@ -14,6 +14,10 @@
         color: gray;
     }
 
+    .pingMs {
+        display: inline;
+    }
+
     .poolSelectContainer {
         display: flex;
         flex-direction: row;
