Add button for quick creator

--- a/client/source/index.less
+++ b/client/source/index.less
@@ -59,8 +59,12 @@ iframe {
 }
 
 .eventDirectory {
-    .line2 {
-        display: flex;
-        flex-direction: row;
+    .events {
+        margin-top: 1em;
+
+        .line2 {
+            display: flex;
+            flex-direction: row;
+        }
     }
 }
