--- a/client/source/index.less
+++ b/client/source/index.less
@@ -1,6 +1,17 @@
+html, body, #mount {
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
 
-body {
-    overscroll-behavior: contain;
+    display: flex;
+    flex-direction: column;
+}
+
+iframe {
+    min-width: 99vw;
+    min-height: 95vh;
+    flex-grow: 1;
+    border: 0;
 }
 
 .kindleTest {
@@ -50,12 +61,6 @@ body {
     height: 100%;
     left: 0;
     top: 0;
-}
-
-iframe {
-    width: 100%;
-    height: 100%;
-    border: 0px;
 }
 
 .eventDirectory {
